--- a/index.html
+++ b/index.html
@@ -8,42 +8,36 @@
   
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
   <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
+  <div id="card">
+    <div class="top-icon"><img src="images/icon-star.svg" alt="star-icon"></div>
+    <h1>How did we do?</h1>
+    <p>Please let us know how we did with your support request. All feedback is appreciated 
+     to help us improve our offering!</p> 
+   <div class="nums-div">
+     <div class="dig">1</div>
+     <div class="dig">2</div>
+     <div class="dig">3</div>
+     <div class="dig">4</div>
+     <div class="dig">5</div>
+   </div>
+    
+   <button class="btn">Submit</button>
+  </div>
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
+<div id="thanksCard">
+  <div class="thanks-img"><img src="images/illustration-thank-you.svg" alt="thanks-img"></div>
+  <div class="selceted-result">You selected <!-- Add rating here --> out of 5</div>
+  <h1>Thank you!</h1>
+  <p>We appreciate you taking the time to give a rating. If you ever need more support, 
+    don’t hesitate to get in touch!</p>
+  </div>
   <!-- Thank you state end -->
 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
