set body style, add .hidden class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
-<div id="thanksCard">
+<div id="thanksCard" class="hidden">
   <div class="thanks-img"><img src="images/illustration-thank-you.svg" alt="thanks-img"></div>
   <div class="selceted-result">You selected <!-- Add rating here --> out of 5</div>
   <h1>Thank you!</h1>
