--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>Please let us know how we did with your support request. All feedback is appreciated 
      to help us improve our offering!</p> 
    <div class="nums-div">
-     <div class="dig">1</div>
+     <div class="dig"><span>1</span></div>
      <div class="dig">2</div>
      <div class="dig">3</div>
      <div class="dig">4</div>
