--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- Rating state start -->
-  <div id="card">
+  <div class="card hidden">
     <div class="top-icon"><img src="images/icon-star.svg" alt="star-icon"></div>
     <h1>How did we do?</h1>
     <p>Please let us know how we did with your support request. All feedback is appreciated 
@@ -32,7 +32,7 @@
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
-<div id="thanksCard" class="hidden">
+<div class="thanksCard">
   <div class="thanks-img"><img src="images/illustration-thank-you.svg" alt="thanks-img"></div>
   <div class="selceted-result">You selected <!-- Add rating here --> out of 5</div>
   <h1>Thank you!</h1>
