--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Thank you state start -->
 <div class="thanksCard">
   <div class="thanks-img"><img src="images/illustration-thank-you.svg" alt="thanks-img"></div>
-  <div class="selceted-result">You selected <!-- Add rating here --> out of 5</div>
+  <div class="selected-result">You selected <!-- Add rating here --> out of 5</div>
   <h1>Thank you!</h1>
   <p>We appreciate you taking the time to give a rating. If you ever need more support, 
     don’t hesitate to get in touch!</p>
