add event listener for btn

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     don’t hesitate to get in touch!</p>
   </div>
   <!-- Thank you state end -->
-  <script src="index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
