--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <p>Please let us know how we did with your support request. All feedback is appreciated 
      to help us improve our offering!</p> 
    <div class="nums-div">
-     <div class="dig">1</div>
-     <div class="dig">2</div>
-     <div class="dig">3</div>
-     <div class="dig">4</div>
-     <div class="dig">5</div>
+     <button class="dig">1</button>
+     <button class="dig">2</button>
+     <button class="dig">3</button>
+     <button class="dig">4</button>
+     <button class="dig">5</button>
    </div>
     
    <button class="btn">Submit</button>
